@@ -102,6 +102,7 @@ WebService::LiveJournal                        = 0.07
 Win32::ErrorMode                               = 0.04
 Win32::Getppid                                 = 0.02
 Win32::Shortcut::Readlink                      = 0.02
+Win32API::ProcessStatus                        = 0.03
 WWW::Bugzilla::BugTree                         = 0.04
 Yars                                           = 1.08
 
